# ESP-BLE-MESH

provisioner/: CMakeLists.txt  mesh_controller.py  partitions.csv  sdkconfig  sdkconfig.old
provisioner/components/BLE_mesh_provisioner/: BLE_mesh_prov_cb_handler.c  BLE_mesh_prov_definitions.h  BLE_mesh_prov_initializer.c  BLE_mesh_prov_initializer.h  CMakeLists.txt
provisioner/components/UART_commands/: CMakeLists.txt  UART_commands.c  UART_commands.h
provisioner/components/provisioner/: CMakeLists.txt  provisioner.c  provisioner.h  provisioner_definitions.h  provisioner_info.c
provisioner/main/: CMakeLists.txt  main.c
server/: CMakeLists.txt  flash.sh
server/components/BLE_mesh_device_controller/: BLE_mesh_device_controller.c  BLE_mesh_device_controller.h  CMakeLists.txt
server/components/BLE_mesh_initializer/: BLE_mesh_definitions.h  BLE_mesh_initializer.c  BLE_mesh_initializer.h  BLE_mesh_models.h  BLE_mesh_opcode.h  BLE_mesh_publication.h
server/components/BLE_mesh_light_lightness_server/: BLE_mesh_light_lightness_server.c  BLE_mesh_light_lightness_server.h  BLE_mesh_light_server.c  BLE_mesh_light_server.h  BLE_mesh_light_server_generic_level_server.c  BLE_mesh_light_server_generic_on_off_server.c  BLE_mesh_light_server_hsl_server.c  BLE_mesh_light_server_light_ctl_server.c  BLE_mesh_light_server_lightness_server.c  CMakeLists.txt
server/infos/: esp_ble_mesh_light_lightness_state_t.md  mesh-details-chatgpt.md  mesh_details_deepsheek.md
server/main/: CMakeLists.txt  Kconfig.projbuild  main.c
(+3 files in other folders)
